// The components of a tile that can be rendered by a tile renderer.
syntax = "proto3";

package androidx.wear.tiles.testing.proto;

import "timeline.proto";
import "version.proto";

option java_package = "androidx.wear.tiles.testing.proto";
option java_outer_classname = "TileProto";

// A holder for a tile. This specifies the resources to use for this delivery
// of the tile, and the timeline for the tile.
message Tile {
  // The resource version required for these tiles.
  string resources_version = 1;

  // The tiles to show in the carousel, along with their validity periods.
  Timeline timeline = 2;

  // The schema version that this tile was built with.
  VersionInfo schema_version = 3;

  // How many milliseconds of elapsed time (**not** wall clock time) this tile
  // can be considered to be "fresh". The platform will attempt to refresh
  // your tile at some point in the future after this interval has lapsed. A
  // value of 0 here signifies that auto-refreshes should not be used (i.e. you
  // will manually request updates via TileProviderService#getRequester).
  uint64 freshness_interval_millis = 4;
}
